大更新，升级了架构，完成了大部分功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.myapplication1">
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:name=".MyApplication"
@@ -12,23 +14,38 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:theme="@style/Theme.MyApplication1"
         android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.MyApplication1">
+        tools:replace="android:theme">
+
+        <activity
+            android:name=".ui.SplashActivity"
+            android:theme="@style/LunchTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
+        <activity android:name=".ui.notifications.User.RegisterActivity" />
+        <activity android:name=".ui.notifications.User.UserActivity" />
+        <activity android:name=".ui.notifications.HistoryActivity" />
+
         <service
             android:name=".network.back.DataService"
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".ui.notifications.LoginActivity" />
+        <activity android:name=".ui.notifications.User.LoginActivity" />
         <activity android:name=".ui.dashboard.MyActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
-            <intent-filter>
+<!--            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
     </application>
 
