--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.myapplication1"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -33,6 +33,7 @@ android {
 
 dependencies {
 
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -54,4 +55,21 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // room 相关的库
+    def room_version = "2.3.0"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    //添加mmkv 数据存储的依赖
+    implementation 'com.tencent:mmkv-static:1.2.10'
+    //Glide库
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    //圆形控件
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    //第三方弹窗
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    //地区选择第三方库
+    implementation 'com.github.crazyandcoder:citypicker:6.0.2'
+
 }
